fix like btn on iphone

--- a/blocks/gallery/__favourite/gallery__favourite.css
+++ b/blocks/gallery/__favourite/gallery__favourite.css
@@ -6,6 +6,7 @@
   width: 22px;
   height: 19px;
   background: url(../../../images/heart.svg) center/contain no-repeat;
+  flex-shrink: 0;
 }
 .gallery__favourite:hover {
   opacity: 0.5;
